added animation to images on index.html and gallery.html.  Added testimonials to index.html

--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
         source
         src="ufx.mov"
         type="video/mp4"
-
       ></video>
     </div>
-    <div class="text-center">
+    <div class="container text-center">
       <h2>Welcome</h2>
       <p>
         At UrbanFX Photography, we believe in capturing the essence of every
@@ -68,11 +67,15 @@
       </p>
     </div>
     <br /><br /><br /><br />
-    <div class="container">
+    <div class="container fade-in-card">
       <div class="row">
         <div class="col" style="margin: 5px">
-          <div class="card text-center col" style="width: 18rem">
-            <img src="img/headshot.jpg" class="card-img-top photoFrame" alt="#" />
+          <div class="card text-center col" style="width: 22rem">
+            <img
+              src="img/headshot.jpg"
+              class="card-img-top photoFrame"
+              alt="#"
+            />
             <div class="card-body">
               <h5 class="card-title">Headshots</h5>
               <p class="card-text">View Headshots</p>
@@ -81,8 +84,12 @@
           </div>
         </div>
         <div class="col" style="margin: 5px">
-          <div class="card text-center col" style="width: 18rem">
-            <img src="img/portrait.jpeg" class="card-img-top photoFrame" alt="#" />
+          <div class="card text-center col" style="width: 22rem">
+            <img
+              src="img/portrait.jpeg"
+              class="card-img-top photoFrame"
+              alt="#"
+            />
             <div class="card-body">
               <h5 class="card-title">Portrait</h5>
               <p class="card-text">View Portraits</p>
@@ -91,7 +98,7 @@
           </div>
         </div>
         <div class="col" style="margin: 5px">
-          <div class="card text-center col" style="width: 18rem">
+          <div class="card text-center col" style="width: 22rem">
             <img src="img/prom.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Prom</h5>
@@ -103,8 +110,12 @@
       </div>
       <div class="row">
         <div class="col" style="margin: 5px">
-          <div class="card text-center col" style="width: 18rem">
-            <img src="img/senior.jpeg" class="card-img-top photoFrame" alt="#" />
+          <div class="card text-center col" style="width: 22rem">
+            <img
+              src="img/senior.jpeg"
+              class="card-img-top photoFrame"
+              alt="#"
+            />
             <div class="card-body">
               <h5 class="card-title">Senior</h5>
               <p class="card-text">Input text here</p>
@@ -113,8 +124,12 @@
           </div>
         </div>
         <div class="col" style="margin: 5px">
-          <div class="card text-center col" style="width: 18rem">
-            <img src="img/family.jpeg" class="card-img-top photoFrame" alt="#" />
+          <div class="card text-center col" style="width: 22rem">
+            <img
+              src="img/family.jpeg"
+              class="card-img-top photoFrame"
+              alt="#"
+            />
             <div class="card-body">
               <h5 class="card-title">Family</h5>
               <p class="card-text">Input text here</p>
@@ -123,7 +138,7 @@
           </div>
         </div>
         <div class="col" style="margin: 5px">
-          <div class="card text-center col" style="width: 18rem">
+          <div class="card text-center col" style="width: 22rem">
             <img src="img/event.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Event</h5>
@@ -134,7 +149,31 @@
         </div>
       </div>
     </div>
-
+    <div class="text-center" style="margin-top: 200px; margin-bottom: 100px">
+      <h2>Testimonials</h2>
+    </div>
+    <div class="container testamonyPictures fade-in-card">
+      <div class="col text-center">
+        <div>
+          <img src="img/testamony2.png" />
+        </div>
+        <div>
+          <img src="img/testamony5.png" />
+        </div>
+        <div>
+          <img src="img/testamony3.png" />
+        </div>
+        <div>
+          <img src="img/testamony4.png" />
+        </div>
+        <div>
+          <img src="img/testamony1.png" />
+        </div>
+        <div>
+          <img src="img/testamony6.png" />
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
