--- a/gallery.html
+++ b/gallery.html
@@ -38,65 +38,99 @@
       </form>
     </nav>
     <div class="text-center">
-      <h2>
-        Gallery
-      </h2>
+      <h2>Gallery</h2>
     </div>
-    <div class="galleryContainer text-center">
-      <div class="row">
+    <div class="galleryContainer">
+      <div class="row text center">
         <div class="col">
-          <img src="img/headshot1.jpg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/headshot1.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/headshot2.jpg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/headshot2.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/headshot3.jpg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/headshot3.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/portrait1.jpeg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/portrait1.jpeg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/portrait2.jpg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/portrait2.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/portrait3.jpeg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/portrait3.jpeg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/prom1.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/prom1.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/prom2.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/prom2.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/prom3.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/prom3.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/senior1.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/senior1.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/senior2.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/senior2.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/senior3.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/senior3.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/family1.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/family1.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/family2.jpeg" class="photoFrame" alt="headshot photo">
+          <img src="img/family2.jpeg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/family3.jpg" class="photoFrame" alt="headshot photo">
+          <img src="img/family3.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
         </div>
         <div class="col">
-          <img src="img/branding1.jpeg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/branding1.jpeg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/branding2.jpeg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/branding2.jpeg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/branding3.jpeg" class="photoFrame" alt="headshot photo">
+          <img
+            src="img/branding3.jpeg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
       </div>
     </div>
