added contact page and updated nav on all pages.  h2 on about page

--- a/about.html
+++ b/about.html
@@ -34,27 +34,34 @@
           <button class="btn btn-sm btn-outline-secondary" type="button">
             Gallery
           </button>
+        <a href="contact.html">
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Contact
+          </button>
         </a>
       </form>
     </nav>
-    <div class="text-center">
-      <h2>About UrbanFX Photography</h2>
-    </div>
-    <br /><br /><br /><br /><br />
+    <br /><br /><br /><br />
     <div class="text-center row" style="width:100%">
       <div class="col">
         <img src="img/photographer.jpg" height="250px" class="photoFrame" />
+        <p>Alexander Hamilton II</p>
       </div>
       <div class="col">
         <img src="img/ufxlogo.png" height="250px" />
       </div>
       <div class="col">
         <img src="img/photographertwo.jpg" height="250px" class="photoFrame" />
+        <p>Alyssa Hamilton</p>
       </div>
     </div>
     <div>
+      <div class="text-center">
+        <h2>About UrbanFX Photography</h2>
+      </div>
+
       <br /><br /><br /><br /><br />
-      <p class="text-center">
+      <p class="container text-center">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
         Alexander and Alyssa Hamilton are passionate about transforming your
