--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,11 @@
             Gallery
           </button>
         </a>
+        <a href="contact.html">
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Contact
+          </button>
+        </a>
       </form>
     </nav>
     <div class="text-center">
@@ -85,31 +90,67 @@
           />
         </div>
         <div class="col">
-          <img src="img/prom1.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/prom1.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/prom2.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/prom2.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/prom3.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/prom3.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/senior1.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/senior1.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/senior2.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/senior2.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/senior3.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/senior3.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/family1.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/family1.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/family2.jpeg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/family2.jpeg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
-          <img src="img/family3.jpg" class="photoFrame fade-in-card" alt="headshot photo" />
+          <img
+            src="img/family3.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
         </div>
         <div class="col">
           <img
