--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             Gallery
           </button>
         </a>
+        <a href="contact.html">
+          <button class="btn btn-sm btn-outline-secondary" type="button">
+            Contact
+          </button>
+        </a>
       </form>
     </nav>
     <div class="video-container" style="border: groove grey 20px">
