added form to contact page

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <h2>About UrbanFX Photography</h2>
       </div>
 
-      <br /><br /><br /><br /><br />
+      <br /><br /><br />
       <p class="container text-center">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
@@ -76,6 +76,10 @@
         and let us capture your story in a way only we can! Contact Us Now and
         start your journey towards stunning, unique photography.
       </p>
+    </div>
+    <br><br><br><br>
+    <div class="container text-center">
+      <iframe src="https://www.youtube.com/embed/Q5J7rKBgw8o?si=_wG6yQ_4gfIIdIe-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="text-center" style="margin-top: 100px">
       <h2>Our Services</h2>
