--- a/thanks.html
+++ b/thanks.html
@@ -42,11 +42,7 @@
           </a>
       </form>
     </nav>
-    <form action="https://formsubmit.co/aphamil06@gmail.com" method="POST">
-        <input type="email" name="email" placeholder="Email Address" required>
-        <input type="hidden" name="_next" value="https://ufxphotos.com/thanks.html">
-        <input type="text" name="name" required>
-        <input type="email" name="email" required>
-        <button type="submit">Send</button>
-   </form>
+    <h2>
+        Thank you for your submission.  We will reach out to you shortly.
+    </h2>
     </body>
