fixed alignment in gallery and added javascript on book now button

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header text-center">
-      <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
+      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
