--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header text-center">
-      <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
+      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
@@ -45,18 +45,18 @@
     <div class="text-center">
       <h2>Gallery</h2>
     </div>
-    <div class="galleryContainer">
-      <div class="row text center">
-        <div class="col">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col" id="headshots">
           <img
-            src="img/headshot1.jpg"
+            src="img/headshot2.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/headshot2.jpg"
+            src="img/headshot1.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
@@ -68,16 +68,9 @@
             alt="headshot photo"
           />
         </div>
-        <div class="col">
+        <div class="col" id="portrait">
           <img
             src="img/portrait1.jpeg"
-            class="photoFrame fade-in-card"
-            alt="headshot photo"
-          />
-        </div>
-        <div class="col">
-          <img
-            src="img/portrait2.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
@@ -90,6 +83,13 @@
           />
         </div>
         <div class="col">
+          <img
+            src="img/portrait2.jpg"
+            class="photoFrame fade-in-card"
+            alt="headshot photo"
+          />
+        </div>
+        <div class="col" id="prom">
           <img
             src="img/prom1.jpg"
             class="photoFrame fade-in-card"
@@ -110,7 +110,7 @@
             alt="headshot photo"
           />
         </div>
-        <div class="col">
+        <div class="col" id="senior">
           <img
             src="img/senior1.jpg"
             class="photoFrame fade-in-card"
@@ -131,7 +131,7 @@
             alt="headshot photo"
           />
         </div>
-        <div class="col">
+        <div class="col" id="family">
           <img
             src="img/family1.jpg"
             class="photoFrame fade-in-card"
@@ -152,7 +152,7 @@
             alt="headshot photo"
           />
         </div>
-        <div class="col">
+        <div class="col" id="branding">
           <img
             src="img/branding1.jpeg"
             class="photoFrame fade-in-card"
