--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header text-center">
-      <img src="img/ufxlogo.png" height="100px" style="border: solid 1px" />
+      <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
       <button type="button" class="btn btn-success">Book Now</button>
     </header>
@@ -42,7 +42,8 @@
       </form>
     </nav>
     <br /><br /><br /><br />
-    <div class="text-center row" style="width:100%">
+    <div class="container text-center">
+    <div class="row">
       <div class="col">
         <img src="img/photographer.jpg" height="250px" class="photoFrame" />
         <p>Alexander Hamilton II</p>
@@ -56,12 +57,13 @@
       </div>
     </div>
     <div>
+      </div>
       <div class="text-center">
         <h2>About UrbanFX Photography</h2>
       </div>
 
       <br /><br /><br />
-      <p class="container text-center">
+      <p class="container text-center" style="background:rgba(0, 0, 0, 0.4)">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
         Alexander and Alyssa Hamilton are passionate about transforming your
