Changed Img to img on images folder

--- a/thanks.html
+++ b/thanks.html
@@ -36,13 +36,12 @@
           </button>
         </a>
         <a href="contact.html">
-            <button class="btn btn-outline-success me-2" type="button">
-              Contact
-            </button>
-          </a>
+          <button class="btn btn-outline-success me-2" type="button">
+            Contact
+          </button>
+        </a>
       </form>
     </nav>
-    <h2>
-        Thank you for your submission.  We will reach out to you shortly.
-    </h2>
-    </body>
+    <h2>Thank you for your submission. We will reach out to you shortly.</h2>
+  </body>
+</html>
