--- a/contact.html
+++ b/contact.html
@@ -36,17 +36,22 @@
           </button>
         </a>
         <a href="contact.html">
-            <button class="btn btn-outline-success me-2" type="button">
-              Contact
-            </button>
-          </a>
+          <button class="btn btn-outline-success me-2" type="button">
+            Contact
+          </button>
+        </a>
       </form>
     </nav>
     <form action="https://formsubmit.co/aphamil06@gmail.com" method="POST">
-        <input type="email" name="email" placeholder="Email Address" required>
-        <input type="hidden" name="_next" value="https://ufxphotos.com/thanks.html">
-        <input type="text" name="name" required>
-        <input type="email" name="email" required>
-        <button type="submit">Send</button>
-   </form>
-    </body>
+      <input type="email" name="email" placeholder="Email Address" required />
+      <input
+        type="hidden"
+        name="_next"
+        value="https://ufxphotos.com/thanks.html"
+      />
+      <input type="text" name="name" required />
+      <input type="email" name="email" required />
+      <button type="submit">Send</button>
+    </form>
+  </body>
+</html>
