--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header text-center">
       <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
-      <button type="button" class="btn btn-success" id="bookNow">Book Now</button>
+      <button type="button" class="btn btn-success" id="bookNow">
+        Book Now
+      </button>
     </header>
     <nav class="navbar bg-body-tertiary">
       <form class="container-fluid justify-content-center">
@@ -30,8 +32,12 @@
             About
           </button>
         </a>
-        <a href="gallery.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
+        <a href="#">
+          <button
+            id="galleryButton"
+            class="btn btn-sm btn-outline-secondary"
+            type="button"
+          >
             Gallery
           </button>
         </a>
@@ -40,7 +46,6 @@
             Contact
           </button>
         </a>
-        <button type="button" class="btn btn-warning" id="galleryButton">Gallery Login</button>
       </form>
     </nav>
     <div class="video-container" style="border: groove grey 20px">
@@ -56,7 +61,7 @@
     </div>
     <div class="container text-center">
       <h2>Welcome</h2>
-      <p style="background:rgba(0, 0, 0, 0.4)">
+      <p style="background: rgba(0, 0, 0, 0.4)">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
         Alexander and Alyssa Hamilton are passionate about transforming your
@@ -85,7 +90,9 @@
             <div class="card-body">
               <h5 class="card-title">Headshots</h5>
               <p class="card-text">View Headshots</p>
-              <a href="gallery.html#headshots" class="btn btn-primary">View Headshots</a>
+              <a href="gallery.html#headshots" class="btn btn-primary"
+                >View Headshots</a
+              >
             </div>
           </div>
         </div>
@@ -99,7 +106,9 @@
             <div class="card-body">
               <h5 class="card-title">Portrait</h5>
               <p class="card-text">View Portraits</p>
-              <a href="gallery.html#portrait" class="btn btn-primary">View Portraits</a>
+              <a href="gallery.html#portrait" class="btn btn-primary"
+                >View Portraits</a
+              >
             </div>
           </div>
         </div>
@@ -125,7 +134,9 @@
             <div class="card-body">
               <h5 class="card-title">Senior</h5>
               <p class="card-text">Input text here</p>
-              <a href="gallery.html#senior" class="btn btn-primary">View Seniors</a>
+              <a href="gallery.html#senior" class="btn btn-primary"
+                >View Seniors</a
+              >
             </div>
           </div>
         </div>
@@ -139,17 +150,25 @@
             <div class="card-body">
               <h5 class="card-title">Family</h5>
               <p class="card-text">Input text here</p>
-              <a href="gallery.html#family" class="btn btn-primary">View Family</a>
+              <a href="gallery.html#family" class="btn btn-primary"
+                >View Family</a
+              >
             </div>
           </div>
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
-            <img src="img/branding1.jpeg" class="card-img-top photoFrame" alt="#" />
+            <img
+              src="img/branding1.jpeg"
+              class="card-img-top photoFrame"
+              alt="#"
+            />
             <div class="card-body">
               <h5 class="card-title">Branding</h5>
               <p class="card-text">View Event</p>
-              <a href="gallery.html#branding" class="btn btn-primary">View Event</a>
+              <a href="gallery.html#branding" class="btn btn-primary"
+                >View Event</a
+              >
             </div>
           </div>
         </div>
@@ -180,7 +199,6 @@
         </div>
       </div>
     </div>
-  
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
