changed image names to Img

--- a/gallery.html
+++ b/gallery.html
@@ -49,126 +49,126 @@
       <div class="row">
         <div class="col" id="headshots">
           <img
-            src="img/headshot2.jpg"
+            src="Img/headshot2.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/headshot1.jpg"
+            src="Img/headshot1.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/headshot3.jpg"
+            src="Img/headshot3.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col" id="portrait">
           <img
-            src="img/portrait1.jpeg"
+            src="Img/portrait1.jpeg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/portrait3.jpeg"
+            src="Img/portrait3.jpeg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/portrait2.jpg"
+            src="Img/portrait2.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col" id="prom">
           <img
-            src="img/prom1.jpg"
+            src="Img/prom1.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/prom2.jpg"
+            src="Img/prom2.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/prom3.jpg"
+            src="Img/prom3.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col" id="senior">
           <img
-            src="img/senior1.jpg"
+            src="Img/senior1.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/senior2.jpg"
+            src="Img/senior2.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/senior3.jpg"
+            src="Img/senior3.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col" id="family">
           <img
-            src="img/family1.jpg"
+            src="Img/family1.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/family2.jpeg"
+            src="Img/family2.jpeg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/family3.jpg"
+            src="Img/family3.jpg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col" id="branding">
           <img
-            src="img/branding1.jpeg"
+            src="Img/branding1.jpeg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/branding2.jpeg"
+            src="Img/branding2.jpeg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
         </div>
         <div class="col">
           <img
-            src="img/branding3.jpeg"
+            src="Img/branding3.jpeg"
             class="photoFrame fade-in-card"
             alt="headshot photo"
           />
