--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
             <img
-              src="img/portrait.jpeg"
+              src="Img/portrait.jpeg"
               class="card-img-top photoFrame"
               alt="#"
             />
@@ -114,7 +114,7 @@
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
-            <img src="img/prom.jpg" class="card-img-top photoFrame" alt="#" />
+            <img src="Img/prom.jpg" class="card-img-top photoFrame" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Prom</h5>
               <p class="card-text">Input text here</p>
@@ -127,7 +127,7 @@
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
             <img
-              src="img/senior.jpeg"
+              src="Img/senior.jpeg"
               class="card-img-top photoFrame"
               alt="#"
             />
@@ -143,7 +143,7 @@
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
             <img
-              src="img/family.jpeg"
+              src="Img/family.jpeg"
               class="card-img-top photoFrame"
               alt="#"
             />
@@ -159,7 +159,7 @@
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
             <img
-              src="img/branding1.jpeg"
+              src="Img/branding1.jpeg"
               class="card-img-top photoFrame"
               alt="#"
             />
@@ -180,22 +180,22 @@
     <div class="container testamonyPictures fade-in-card">
       <div class="col text-center">
         <div>
-          <img src="img/testamony2.png" />
+          <img src="Img/testamony2.png" />
         </div>
         <div>
-          <img src="img/testamony5.png" />
+          <img src="Img/testamony5.png" />
         </div>
         <div>
-          <img src="img/testamony3.png" />
+          <img src="Img/testamony3.png" />
         </div>
         <div>
-          <img src="img/testamony4.png" />
+          <img src="Img/testamony4.png" />
         </div>
         <div>
-          <img src="img/testamony1.png" />
+          <img src="Img/testamony1.png" />
         </div>
         <div>
-          <img src="img/testamony6.png" />
+          <img src="Img/testamony6.png" />
         </div>
       </div>
     </div>
