--- a/about.html
+++ b/about.html
@@ -45,14 +45,14 @@
     <div class="container text-center">
     <div class="row">
       <div class="col">
-        <img src="img/photographer.jpg" height="250px" class="photoFrame" />
+        <img src="Img/photographer.jpg" height="250px" class="photoFrame" />
         <p>Alexander Hamilton II</p>
       </div>
       <div class="col">
-        <img src="img/ufxlogo.png" height="250px" />
+        <img src="Img/ufxlogo.png" height="250px" />
       </div>
       <div class="col">
-        <img src="img/photographertwo.jpg" height="250px" class="photoFrame" />
+        <img src="Img/photographertwo.jpg" height="250px" class="photoFrame" />
         <p>Alyssa Hamilton</p>
       </div>
     </div>
