added ai image stored and uploaded from cloudinary cnd to index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
     <div class="container text-center">
       <h2>Welcome</h2>
+      <img src="https://res.cloudinary.com/dqu9ruxzf/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1721514276/Untitled_design_zlnxkb.png">
       <p style="background: rgba(0, 0, 0, 0.4)">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
